# GFSDiskServer

./: CMakeLists.txt  README.md
config/: chunk.ini  master.ini
include/: SimpleIni.h  codec.h  msgcode.h
src/ChunkServer/: ChunkServer.cpp  ChunkServer.h  UPDOWNER.cpp  UPDOWNER.h  chunk.cpp
src/MasterServer/: MasterServer.cpp  MasterServer.h  SFS.h  master.cpp
